# kmgccc_player

./: .gitignore  CHANGELOG.md  GlassTypes.md  LIQUID_GLASS_SPEC.md  README.md
LDDC_Fetch_Core/: README.md  batch_split_and_convert.py  build_pyinstaller.sh  build_universal.sh  fix_summary.md  lddc_server_entry.py  lrc_to_ttml.py  lrc_to_ttml_with_translation.py  pyproject.toml
LDDC_Fetch_Core/.venv_arm64/bin 3/: activate  activate.fish  httpx  macho_dump  macho_find  macho_standalone  pip  pyi-archive_viewer  pyi-bindepend  pyi-grab_version  pyi-makespec  pyi-set_version  pyinstaller
LDDC_Fetch_Core/dist_x86_64/lddc-server/: lddc-server
LDDC_Fetch_Core/examples/: SwiftCallCLI.swift  fetch_once.py  fetch_save_song.py  fetch_separate_files.py
LDDC_Fetch_Core/examples/out_separate/: 司南 - 守望者 [Original].lrc  珂拉琪 Collage - MALIYANG [Original].lrc  珂拉琪 Collage - MALIYANG [Translation].lrc
LDDC_Fetch_Core/examples/ttml_with_translation_example/: AURORA - Animal Soul.ttml
LDDC_Fetch_Core/src/lddc_fetch_core/: __init__.py  __main__.py  cache.py  cli.py  exceptions.py  fetch.py  lrc_render.py  match.py  models.py  server.py  timeutil.py  version.py
LDDC_Fetch_Core/test_convert/ori/: AREA21／Martin Garrix／Maejor／Mark Otten - Followers (325289574).lrc  Bastille／Ella - No Angels (29803091).lrc  DOUDOU - 超度我（Live in 昆明 20231210） (2613680867).lrc  (+2 more)
applemusic-like-lyrics-full-refractor/: .gitignore  Cargo.toml  README-CN.md  README.md  biome.json  lerna.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
(+628 files in other folders)
